--- a/HRMS.API/bin/HRMS.API.dll.config
+++ b/HRMS.API/bin/HRMS.API.dll.config
@@ -39,7 +39,7 @@
     <add key="DefaultSystemUserProfilePic" value="\App_Data\DefaultFiles\SystemUser\icons8_user_90_gray.png" />
     <!-- API Email service email config -->
     <add key="SiteSupportEmail" value="silupost3@gmail.com" />
-    <add key="SiteSupportEmailPassword" value="Ssilupost12~" />
+    <add key="SiteSupportEmailPassword" value="D854624B594F77C9C9781416AD15C02B4FD3" />
     <add key="EmailVerificationTempPath" value="\App_Data\EmailTemp\EmailVerificationTemp.html" />
     <add key="ChangePasswordTempPath" value="\App_Data\EmailTemp\ChangePasswordTemp.html" />
     <add key="ForgotPasswordTempPath" value="\App_Data\EmailTemp\ForgotPasswordTemp.html" />
