--- a/HRMS.OAuth/Web.config
+++ b/HRMS.OAuth/Web.config
@@ -5,7 +5,8 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="HRMS" connectionString="data source=WIN-I39HMNFIGM0\SQLEXPRESS;initial catalog=hrms;User ID=sa;Password=admin123;Integrated Security=false;multipleactiveresultsets=True;" providerName="System.Data.SqlClient" />
+    <!--<add name="HRMS" connectionString="data source=WIN-I39HMNFIGM0\SQLEXPRESS;initial catalog=hrms;User ID=sa;Password=admin123;Integrated Security=false;multipleactiveresultsets=True;" providerName="System.Data.SqlClient" />-->
+    <add name="HRMS" connectionString="Data Source=SQL5098.site4now.net;Initial Catalog=db_a8840a_erwin330;User Id=db_a8840a_erwin330_admin;Password=Kingofcrossover2" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <!--Authentication-->
