--- a/HRMS.Web/HRMS.Web.csproj
+++ b/HRMS.Web/HRMS.Web.csproj
@@ -756,8 +756,8 @@
     <Content Include="plugins\webcamjs-master\webcam.js" />
     <Content Include="plugins\webcamjs-master\webcam.min.js" />
     <Content Include="plugins\webcamjs-master\webcam.swf" />
+    <Content Include="Resources\Images\hrms_logo.png" />
     <Content Include="Resources\Images\icons8_user_90_gray.png" />
-    <Content Include="Resources\Images\SIGIN_LOGO.png" />
     <Content Include="Scripts\App\app.js" />
     <Content Include="Scripts\App\dataFormat.js" />
     <Content Include="Scripts\App\globalConfig.js" />
@@ -806,8 +806,9 @@
     <Content Include="plugins\baguettebox.js\package.json" />
     <Content Include="plugins\baguettebox.js\README.md" />
     <Content Include="plugins\baguettebox.js\src\baguetteBox.scss" />
+    <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
+    <None Include="Properties\PublishProfiles\FolderProfile1.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
-    <Content Include="Scripts\Controller\ItemType.js" />
     <Content Include="Scripts\Controller\ResetPassword.js" />
     <Content Include="Scripts\Controller\Register.js" />
     <Content Include="Scripts\Controller\Login.js" />
@@ -843,7 +844,6 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\ErrorController.cs" />
     <Compile Include="Controllers\LegalEntityController.cs" />
-    <Compile Include="Controllers\ItemTypeController.cs" />
     <Compile Include="Controllers\SystemWebAdminRolePrivilegesController.cs" />
     <Compile Include="Controllers\SystemWebAdminMenuRolesController.cs" />
     <Compile Include="Controllers\SystemUserController.cs" />
@@ -896,8 +896,6 @@
     <Content Include="Views\Account\ResetPassword.cshtml" />
     <Content Include="Views\SystemWebAdminRolePrivileges\_Table.cshtml" />
     <Content Include="Views\SystemWebAdminRolePrivileges\Index.cshtml" />
-    <Content Include="Views\ItemType\Index.cshtml" />
-    <Content Include="Views\ItemType\_Table.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -911,7 +909,6 @@
     <Folder Include="plugins\Proppeller-Material-Design-Bootstrap\components\get-started\" />
     <Folder Include="plugins\Proppeller-Material-Design-Bootstrap\components\toggle-switch\js\" />
     <Folder Include="plugins\Proppeller-Material-Design-Bootstrap\components\tooltip\js\" />
-    <Folder Include="Properties\PublishProfiles\" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{4A0DDDB5-7A95-4FBF-97CC-616D07737A77}" />
