--- a/HRMS.API/Web.config
+++ b/HRMS.API/Web.config
@@ -5,8 +5,8 @@
   -->
 <configuration>
   <connectionStrings>
-    <!--<add name="HRMS" connectionString="data source=WIN-I39HMNFIGM0\SQLEXPRESS;initial catalog=hrms;User ID=sa;Password=admin123;Integrated Security=false;multipleactiveresultsets=True;" providerName="System.Data.SqlClient" />-->
-    <add name="HRMS" connectionString="Data Source=SQL5098.site4now.net;Initial Catalog=db_a8840a_erwin330;User Id=db_a8840a_erwin330_admin;Password=Kingofcrossover2" providerName="System.Data.SqlClient" />
+    <add name="HRMS" connectionString="data source=WIN-I39HMNFIGM0\SQLEXPRESS;initial catalog=hrms;User ID=sa;Password=admin123;Integrated Security=false;multipleactiveresultsets=True;" providerName="System.Data.SqlClient" />
+    <!--<add name="HRMS" connectionString="Data Source=SQL5098.site4now.net;Initial Catalog=db_a8840a_erwin330;User Id=db_a8840a_erwin330_admin;Password=Kingofcrossover2" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
   <appSettings>
     
@@ -47,6 +47,13 @@
     <add key="EmailTempProfilePath" value="\App_Data\EmailTemp\SILUPOST_ICON.png" />
     <add key="ClientLandingPageWebsite" value="www.POSWeblandingpage.somee.com" />
     <add key="GoogleDriveClientSecretJsonPath" value="\App_Data\credentials.json" />
+    <!-- ITextMo -->
+    <add key="ITextMoAPIURL" value="https://api.itexmo.com/api/broadcast" />
+    <add key="ITextMoEmail" value="erwinramirez330@gmail.com" />
+    <add key="ITextMoPassword" value="kingofcrossover" />
+    <add key="ITextMoAPICode" value="TR-ERWIN770684_62HFT" />
+    <add key="ITextMoSenderId" value="WEB HEALTH RECORD MANAGEMENT SYSTEM" />
+    <add key="ITextMoMessageFormat" value="Web Health Record Management System OTP is" />
   </appSettings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
