--- a/HRMS.Web/HRMS.Web.csproj
+++ b/HRMS.Web/HRMS.Web.csproj
@@ -809,6 +809,8 @@
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile1.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
+    <Content Include="Scripts\Controller\Doctor.js" />
+    <Content Include="Scripts\Controller\Patient.js" />
     <Content Include="Scripts\Controller\ResetPassword.js" />
     <Content Include="Scripts\Controller\Register.js" />
     <Content Include="Scripts\Controller\Login.js" />
@@ -844,6 +846,8 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\ErrorController.cs" />
     <Compile Include="Controllers\LegalEntityController.cs" />
+    <Compile Include="Controllers\DoctorController.cs" />
+    <Compile Include="Controllers\PatientController.cs" />
     <Compile Include="Controllers\SystemWebAdminRolePrivilegesController.cs" />
     <Compile Include="Controllers\SystemWebAdminMenuRolesController.cs" />
     <Compile Include="Controllers\SystemUserController.cs" />
@@ -896,6 +900,12 @@
     <Content Include="Views\Account\ResetPassword.cshtml" />
     <Content Include="Views\SystemWebAdminRolePrivileges\_Table.cshtml" />
     <Content Include="Views\SystemWebAdminRolePrivileges\Index.cshtml" />
+    <Content Include="Views\Patient\Index.cshtml" />
+    <Content Include="Views\Patient\_Details.cshtml" />
+    <Content Include="Views\Patient\_Table.cshtml" />
+    <Content Include="Views\Doctor\_Details.cshtml" />
+    <Content Include="Views\Doctor\_Table.cshtml" />
+    <Content Include="Views\Doctor\Index.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
